--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/ok">
 
-    <FrameLayout
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/CameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </FrameLayout>
+        android:layout_height="match_parent">
+        <com.matrix.opencvproject.CameraOverlay
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/overlay"
+            >
+            <requestFocus></requestFocus>
+        </com.matrix.opencvproject.CameraOverlay>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:layout_width="wrap_content"
